Bug 263480 - bluedevil obexftp:// hangs during transfers of big files
Summary: bluedevil obexftp:// hangs during transfers of big files
Status: RESOLVED FIXED
Alias: None
Product: solid
Classification: Unmaintained
Component: bluetooth-kio-obex (other bugs)
Version First Reported In: unspecified
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Alex Fiestas
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-01-17 22:24 UTC by mateusz-lists
Modified: 2011-01-20 17:24 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description mateusz-lists 2011-01-17 22:24:38 UTC
Version:           unspecified (using KDE 4.5.4) 
OS:                Linux

During transfer of big files (like 80MB) connection to phone hangs.
Transfer finishes OK, but any next operation (dir listing, connecting) is no longer possible. Only restart helps.

Reproducible: Sometimes




bluedevil-1.0.1
Comment 1 Alex Fiestas 2011-01-20 14:53:53 UTC
What version of BlueDevil are you using?
Comment 2 mateusz-lists 2011-01-20 15:15:50 UTC
1.0.1
Comment 3 Alex Fiestas 2011-01-20 15:16:53 UTC
Can you can reproduce it all the time?
Comment 4 Alex Fiestas 2011-01-20 16:15:58 UTC
Yes you can, as I already did.

I'm going to fix it right now, thanks for the feedback!
Comment 5 Alex Fiestas 2011-01-20 16:32:48 UTC
Git commit f7f09577df51fc230bc201871401f6b450d45cef by Alex Fiestas
Pushed by afiestas into branch stable

Reset the timer each time transferProgress is emmited.

The session is actually used when the transfer is going on, so we
have to reset the timer in order to avoid invalid sessionTimeout.

BUG: 263480
FIXED-IN: 1.0.2

M  +3    -0    src/daemon/obexftpkded/obexsession.cpp     
M  +3    -0    src/daemon/obexftpkded/obexsession.h     

http://commits.kde.org/983d372e/f7f09577df51fc230bc201871401f6b450d45cef
Comment 6 mateusz-lists 2011-01-20 17:07:16 UTC
Great ! 
Waiting for 1.0.2 release :)
Big thanks and regards !
Comment 7 Alex Fiestas 2011-01-20 17:24:01 UTC
Git commit fdffaa72bd600e0a36859b008ed32a7be2211fdb by Alex Fiestas
Pushed by afiestas into branch master

Reset the timer each time transferProgress is emmited.

The session is actually used when the transfer is going on, so we
have to reset the timer in order to avoid invalid sessionTimeout.

BUG: 263480
FIXED-IN: 1.0.2

M  +3    -0    src/daemon/obexftpkded/obexsession.cpp     
M  +3    -0    src/daemon/obexftpkded/obexsession.h     

http://commits.kde.org/983d372e/fdffaa72bd600e0a36859b008ed32a7be2211fdb