Reset the timer each time transferProgress is emmited.

The session is actually used when the transfer is going on, so we
have to reset the timer in order to avoid invalid sessionTimeout.

BUG: 263480
FIXED-IN: 1.0.2